new photography website

--- a/experience.html
+++ b/experience.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="experience.html">Experience</a>
                     </li>
                     <li class="col-12 col-md-2 nav-item">
-                        <a class="nav-link" href="https://stephenawenzel.github.io/stephenwenzelphotography/index.html">Photography</a>
+                        <a class="nav-link" href="https://www.stephenwenzelphotography.com/">Photography</a>
                     </li>
                     <li class="col-12 col-md-2 nav-item">
                         <a class="nav-link" href="printing.html">Print Resume</a>
@@ -64,7 +64,7 @@
                 <h5 class="col-12 col-sm-12 e-co">Mountain Eye Associates</h5>
                 <p class="col-12 col-sm-12 e-time"><i>May 2022 - April 2023</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
-                <ul class="col-12 col-sm-12">
+                <ul class="col-12 col-sm-12"> 
                     <li class="col-12 col-sm-12">Conducted thorough screenings of new, established, emergency, consultational, and referred patients to identify any visual impairments, eye diseases, or ocular conditions</li>
                     <li class="col-12 col-sm-12">Established positive relationships with patients regardless of their medical or personal backgrounds</li>
                     <li class="col-12 col-sm-12">Collaborated with patients to determine the most suitable eyewear options, including contacts, monocles, monofocal glasses, bifocals, or trifocals, based on their lifestyle</li>
