--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="experience.html">Experience</a>
                     </li>
                     <li class="col-12 col-md-2 nav-item">
-                        <a class="nav-link" href="https://stephenawenzel.github.io/stephenwenzelphotography/index.html">Photography</a>
+                        <a class="nav-link" href="https://www.stephenwenzelphotography.com/">Photography</a>
                     </li>
                     <li class="col-12 col-md-2 nav-item">
                         <a class="nav-link" href="printing.html">Print Resume</a>
