--- a/experience.html
+++ b/experience.html
@@ -179,7 +179,7 @@
             <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Medical and Online Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">Western Carolina Ear, Nose and Throat</h5>
-                <p class="col-12 col-sm-12 e-time"><i>Summers of 2018, 2019, & 2021</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>April 2023 - Present; Summers of 2018, 2019, & 2021</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Optimized website content for a seamless user experience utilizing HTML, CSS, and the Wix website builder</li>
