--- a/printing.html
+++ b/printing.html
@@ -43,9 +43,9 @@
         <a class="col-12 col-sm-12 text-center" id="website_banner" href="https://stephenawenzel.github.io/resume/"><span>Link to view my interactive resume.</span></a>
         -->
     </section>
-    <section class="row experience">
+    <section class="row experience" style="width: 100vw;">
         <h2 class="col-12 col-sm-12 section-titles">Education</h2>
-        <article class="col-6 col-sm-12 e-about">
+        <article class="col-12 col-sm-12 e-about">
             <h4 class="col-12 col-sm-12 e-titles">University of North Carolina at Chapel Hill</h4>
             <h5 class="col-12 col-sm-12 e-co">Bachelor of Science in Biology; Neuroscience & Chemistry Double Minor (May 2022)</h5>
             <p class="col-12 col-sm-12 e-location">Chapel Hill, North Carolina</p>
@@ -62,7 +62,38 @@
         <h2 class="col-12 col-sm-12 section-titles">Experience</h2>
         <section class="col-12 col-sm-12 group">
 
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
+            <article class="col-12 col-sm-12 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Medical and Online Assistant</h4>
+                <h5 class="col-12 col-sm-12 e-co">Western Carolina Ear, Nose and Throat</h5>
+                <p class="col-12 col-sm-12 e-time"><i>April 2023 - Present; Summers of 2018, 2019, & 2021</i></p>
+                <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
+                <ul clas="col-12 col-sm-12">
+                    <li class="col-12 col-sm-12">Maintains patient records, ensuring confidentiality and accuracy of medical data.</li>
+                    <li class="col-12 col-sm-12">Prioritizes tasks effectively, ensuring smooth operations and minimizing wait times for patients.</li>
+                    <li class="col-12 col-sm-12">Utilizes electronic health records (EHR) systems to schedule appointments, update patient information, and retrieve medical records.</li>
+                    <li class="col-12 col-sm-12">Optimizes website content for a seamless user experience utilizing HTML, CSS, and the Wix website builder</li>
+                    <li class="col-12 col-sm-12">Crafts engaging content through photography, videography, blog posts, and website material to expand outreach efforts</li>
+                    <li class="col-12 col-sm-12">Observes and works alongside otolaryngologists to gain insight into the medical and surgical treatments of hearing loss, ear infections, balance disorders, tinnitus, nerve pain, and facial and cranial nerve disorders</li>
+                    <li class="col-12 col-sm-12">Upholds high standards of professionalism, maintaining patient confidentiality and adhering to HIPAA regulations.</li>
+                </ul>
+            </article>
+
+            <article class="col-12 col-sm-12 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Portrait, Landscape, & Wildlife Photographer</h4>
+                <h5 class="col-12 col-sm-12 e-co">Stephen Wenzel Photography</h5>
+                <p class="col-12 col-sm-12 e-time"><i>March 2016 - Present</i></p>
+                <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
+                <ul clas="col-12 col-sm-12">
+                    <li class="col-12 col-sm-12">Effectively communicates with clients to creatively capture and showcase their unique personality and style in contrast with their surroundings</li>
+                    <li class="col-12 col-sm-12">Uses Adobe Suite, including Photoshop and Lightroom, to manage the production and editing of images</li>
+                    <li class="col-12 col-sm-12">Demonstrates expertise in the physics of camera bodies and equipment, enabling the capture of high-quality images in varying environments</li>
+                    <li class="col-12 col-sm-12">Provides a user-friendly and engaging customer experience both online and during the photography session</li>
+                    <li class="col-12 col-sm-12">Develops a business plan that prioritizes the needs of the clients while also generating income for the business</li>
+                    <li class="col-12 col-sm-12">Serves a diverse clientele of over 50 individuals across multiple counties in North Carolina</li>
+                </ul>
+            </article>
+
+            <article class="col-12 col-sm-12 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Ophthalmic Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">Mountain Eye Associates</h5>
                 <p class="col-12 col-sm-12 e-time"><i>May 2022 - April 2023</i></p>
@@ -80,22 +111,7 @@
                 </ul>
             </article>
 
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Photographer</h4>
-                <h5 class="col-12 col-sm-12 e-co">Stephen Wenzel Photography</h5>
-                <p class="col-12 col-sm-12 e-time"><i>March 2016 - Present</i></p>
-                <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
-                <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Effectively communicates with clients to creatively capture and showcase their unique personality and style in contrast with their surroundings</li>
-                    <li class="col-12 col-sm-12">Uses Adobe Suite, including Photoshop and Lightroom, to manage the production and editing of images</li>
-                    <li class="col-12 col-sm-12">Demonstrates expertise in the physics of camera bodies and equipment, enabling the capture of high-quality images in varying environments</li>
-                    <li class="col-12 col-sm-12">Provides a user-friendly and engaging customer experience both online and during the photography session</li>
-                    <li class="col-12 col-sm-12">Develops a business plan that prioritizes the needs of the clients while also generating income for the business</li>
-                    <li class="col-12 col-sm-12">Serves a diverse clientele of over 50 individuals across multiple counties in North Carolina</li>
-                </ul>
-            </article>
-
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
+            <article class="col-12 col-sm-12 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Undergraduate Researcher</h4>
                 <h5 class="col-12 col-sm-12 e-co">Dr. Stephen Rogers' Lab - UNC Chapel Hill Biology Department</h5>
                 <p class="col-12 col-sm-12 e-time"><i>January 2022 - April 2022</i></p>
@@ -109,7 +125,7 @@
                 </ul>
             </article>
 
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
+            <article class="col-12 col-sm-12 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Organic Chemistry II Peer Mentor</h4>
                 <h5 class="col-12 col-sm-12 e-co">UNC Chapel Hill Chemistry Department</h5>
                 <p class="col-12 col-sm-12 e-time"><i>August 2021 - April 2022</i></p>
@@ -122,7 +138,7 @@
                 </ul>
             </article>
 
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
+            <article class="col-12 col-sm-12 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Undergraduate COVID-19 Testing Volunteer</h4>
                 <h5 class="col-12 col-sm-12 e-co">Carolina COVID-19 Student Services Corps</h5>
                 <p class="col-12 col-sm-12 e-time"><i>August 2021 - April 2022</i></p>
@@ -137,7 +153,7 @@
                 </ul>
             </article>
 
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
+            <article class="col-12 col-sm-12 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Undergraduate Research Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">Rogers Lab, Slep Lab - UNC Chapel Hill Department of Biology</h5>
                 <h5 class="col-12 col-sm-12 e-co">"Investigation of the Comparative Effects of Intralumenal Microtubule Acetylation on Drosophila S2 cells When Treated with Cytochalasin D"​</h5>
@@ -152,19 +168,8 @@
             </article>
 
             <!--Added extra margin and padding so that it can go to the next page-->
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Medical and Online Assistant</h4>
-                <h5 class="col-12 col-sm-12 e-co">Western Carolina Ear, Nose and Throat</h5>
-                <p class="col-12 col-sm-12 e-time"><i>Summers of 2018, 2019, & 2021</i></p>
-                <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
-                <ul clas="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Optimized website content for a seamless user experience utilizing HTML, CSS, and the Wix website builder</li>
-                    <li class="col-12 col-sm-12">Crafted engaging content through photography, videography, blog posts, and website material to expand outreach efforts</li>
-                    <li class="col-12 col-sm-12">Observed and worked alongside otolaryngologists to gain insight into the medical and surgical treatments of hearing loss, ear infections, balance disorders, tinnitus, nerve pain, and facial and cranial nerve disorders</li>
-                </ul>
-            </article>
 
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
+            <article class="col-12 col-sm-12 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Volunteer Photographer</h4>
                 <h5 class="col-12 col-sm-12 e-co">Folkmoot International Dance Festival</h5>
                 <p class="col-12 col-sm-12 e-time"><i>Summers of 2018 - 2021</i></p>
@@ -176,7 +181,7 @@
                 </ul>
             </article>
 
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
+            <article class="col-12 col-sm-12 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Undergraduate Research Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">UNC Adams School of Dentistry</h5>
                 <p class="col-12 col-sm-12 e-time"><i>Summer 2020</i></p>
@@ -191,32 +196,35 @@
     <section class="row experience">
         <h2 class="col-12 col-sm-12 section-titles">Activities</h2>
         <section class="col-12 col-sm-12 group act-border">
-            <article class="col-12 col-sm-12 e-about">
+            <article class="col-12 col-sm-4 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Scouts BSA - Adult Volunteer</h4>
                 <p class="col-12 col-sm-12 e-time">Troop 370: Waynesville, NC</p>
                 <p class="col-12 col-sm-12 e-time">November 2022 - Current</p>
             </article>
-            <article class="col-12 col-sm-12 e-about">
+            <article class="col-12 col-sm-4 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">American Red Cross Club of UNC-CH</h4>
                 <h5 class="col-12 col-sm-12 e-co">Social Media Chair (August 2021 - May 2022)</h5>
                 <p class="col-12 col-sm-12 e-time">Member from January 2020 to May 2022</p>
             </article>
-            <article class="col-12 col-sm-12 e-about">
+            <article class="col-12 col-sm-4 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">UNC Chapel Hill Swim Club</h4>
                 <p class="col-12 col-sm-12 e-time">Member from August 2018 to May 2022</p>
             </article>
         </section>
         <h2 class="col-12 col-sm-12 section-titles certs">Certifications</h2>
         <section class="col-12 col-sm-12 group">
-            <article class="col-12 col-sm-12 e-about">
+            <article class="col-12 col-sm-4 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Healthcare - CPR/AED Certification</h4>
                 <h5 class="col-12 col-sm-12 e-co">National CPR Foundation</h5>
                 <h5 class="col-12 col-sm-12 e-co"><i>Expires March 16th, 2025</i></h5>
             </article>
-            <article class="col-12 col-sm-12 e-about">
+            <article class="col-12 col-sm-5 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Adult and Pediatric First Aid/CPR/AED Certification</h4>
                 <h5 class="col-12 col-sm-12 e-co">American Red Cross</h5>
                 <h5 class="col-12 col-sm-12 e-co"><i>Expires March 27th, 2025</i></h5>
+            </article>
+            <article class="col-12 col-sm-3 e-about">
+                <div></div>
             </article>
     </section>
 </main>
