--- a/experience.html
+++ b/experience.html
@@ -60,6 +60,73 @@
         <section class="col-12 col-sm-12 experience">
 
             <article style="margin-top: 5vh;" class="col-12 col-sm-12 col-lg-10 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Medical Assistant</h4>
+                <h5 class="col-12 col-sm-12 e-co">Western Carolina Ear, Nose, and Throat Specialists</h5>
+                <p class="col-12 col-sm-12 e-time"><i>May 2023 - Present</i></p>
+                <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
+                <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-12">Proficient in vital sign assessment and adept at assisting patients during examinations, prioritizing comfort and well-being</li>
+                    <li class="col-12 col-sm-12">Efficiently manages medical records, schedules appointments, and addresses inquiries to maintain a smooth clinic flow</li>
+                    <li class="col-12 col-sm-12">Assists in examinations, procedures, and surgeries, ensuring accurate and updated patient charts with meticulous attention to detail</li>
+                    <li class="col-12 col-sm-12">Provides clear information on medications and treatment plans, offering guidance on proper self-care practices</li>
+                    <li class="col-12 col-sm-12">Serves as an effective liaison between patients and healthcare providers, fostering seamless collaboration for optimal patient care</li>
+                    <li class="col-12 col-sm-12">Ensured the cleanliness and safety of the medical office, including sterilizing equipment and maintaining a tidy work environment</li>
+                    <li class="col-12 col-sm-12">Utilizes eClinical Works for streamlined visit documentation, patient communication, and efficiency office operations</li>
+                    <li class="col-12 col-sm-12">Worked collaboratively and efficiently with a team of trained healthcare professionals to provide high-quality patient care</li>
+                </ul>
+            </article>
+            <article class="col-12 col-sm-9 col-lg-10 image_and_link">
+                <img class="col-12 col-sm-12 col-lg-6" src="wcent.webp" onMouseDown="popupMsg('Unable to access image')">
+                <a href="https://www.wncentdoctors.com/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Western Carolina Ear, Nose, and Throat Specialists</a>
+            </article>
+
+            <article style="margin-top: 5vh;" class="col-12 col-sm-12 col-lg-10 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Marketing Manager</h4>
+                <h5 class="col-12 col-sm-12 e-co">Wenzel Facial Plastic Surgery</h5>
+                <p class="col-12 col-sm-12 e-time"><i>May 2023 - Present</i></p>
+                <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
+                <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-12">Crafts and implements brand strategies aligned with the clinic's values and aesthetic</li>
+                    <li class="col-12 col-sm-12">Ensures consistent brand representation</li>
+                    <li class="col-12 col-sm-12">Oversees the development and execution of digital marketing campaigns</li>
+                    <li class="col-12 col-sm-12">Manages online social media platforms to foster community engagement</li>
+                    <li class="col-12 col-sm-12">Creates compelling and informative content for social media and advertising</li>
+                    <li class="col-12 col-sm-12">Collaborates with medical professionals to translate complex procedures into accessible and engaging content for patients</li>
+                    <li class="col-12 col-sm-12">Develops and implements strategies to enhance patient experience</li>
+                    <li class="col-12 col-sm-12">Utilizes patient testimonials and success stories for effective marketing collateral</li>
+                    <li class="col-12 col-sm-12">Coordinates and executes promotional events, workshops, and seminars to showcase the clinic's expertise and services</li>
+                    <li class="col-12 col-sm-12">Works closely with the surgical team to accurately convey the clinic's unique approach to facial plastic surgery</li>
+                    <li class="col-12 col-sm-12">Monitors key performance indicators to assess the effectiveness of marketing strategies</li>
+                    <li class="col-12 col-sm-12">Establishes partnerships with local businesses, influencers, and organizations to expand the clinic's prsence in the commmunity</li>
+                </ul>
+            </article>
+            <article class="col-12 col-sm-9 col-lg-10 image_and_link">
+                <img class="col-12 col-sm-12 col-lg-6" src="wfps.jpg" onMouseDown="popupMsg('Unable to access image')">
+                <a href="https://wenzelfacialsurgery.com/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Wenzel Facial Plastic Surgery</a>
+            </article>
+
+            <article class="col-12 col-sm-12 col-lg-10 e-about">
+                <h4 class="col-12 col-sm-12 e-titles">Photographer | Portraits, Events, & Nature</h4>
+                <h5 class="col-12 col-sm-12 e-co">Stephen Wenzel Photography</h5>
+                <p class="col-12 col-sm-12 e-time"><i>March 2016 - Present</i></p>
+                <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
+                <ul class="col-12 col-sm-12">
+                    <li class="col-12 col-sm-12">Successfully manages photography projects, from planning and shooting to post-processing, ensuring high-quality images that meet client expectations</li>
+                    <li class="col-12 col-sm-12">Collaborates closely with clients to understand their unique personality and style, effectively capturing and showcasing their individuality within diverse environments</li>
+                    <li class="col-12 col-sm-12">Utilizes Adobe Suite, including Photoshop and Lightroom, to expertly manage the production and editing of images, ensuring high-quality results that meet client expectations</li>
+                    <li class="col-12 col-sm-12">Demonstrates advanced knowledge of camera bodies and equipment, applying principles of physics to achieve optimal image quality in various environmental conditions</li>
+                    <li class="col-12 col-sm-12">Delivers exceptional customer service by providing a seamless and engaging experience both online and during photography sessions, fostering strong client relationships and satisfaction</li>
+                    <li class="col-12 col-sm-12">Develops and implements a strategic business plan focused on meeting client needs while maximizing profitability, resulting in sustainable growth and success</li>
+                    <li class="col-12 col-sm-12">Builds and maintains a diverse clientele base, serving over 75 individuals across multiple counties in North Carolina, demonstrating versatility and adaptability in meeting diverse client needs</li>
+                    <li class="col-12 col-sm-12">Actively participates in community events and initiatives, offering pro bono photography services to local charities, schools, and non-profit organizations, contributing to the community's cultural enrichment and social well-being</li>
+                </ul>
+            </article>
+            <article class="col-12 col-sm-9 col-lg-10 image_and_link">
+                <img class="col-12 col-sm-12 col-lg-6" src="BRP_Fall_Portrait.jpg" onMouseDown="popupMsg('Unable to access image')">
+                <a href="https://www.stephenwenzelphotography.com/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Stephen Wenzel Photography</a>
+            </article>
+
+            <article style="margin-top: 5vh;" class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Ophthalmic Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">Mountain Eye Associates</h5>
                 <p class="col-12 col-sm-12 e-time"><i>May 2022 - April 2023</i></p>
@@ -77,27 +144,8 @@
                 </ul>
             </article>
             <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img href="https://stephenawenzel.github.io/stephenwenzelphotography/" class="col-12 col-sm-12 col-lg-6" src="MEA.jpg" onMouseDown="popupMsg('Unable to access image')">
+                <img class="col-12 col-sm-12 col-lg-6" src="MEA.jpg" onMouseDown="popupMsg('Unable to access image')">
                 <a href="https://mountaineye.org/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Mountain Eye Associates</a>
-            </article>
-
-            <article class="col-12 col-sm-12 col-lg-10 e-about">
-                <h4 class="col-12 col-sm-12 e-titles">Photographer</h4>
-                <h5 class="col-12 col-sm-12 e-co">Stephen Wenzel Photography</h5>
-                <p class="col-12 col-sm-12 e-time"><i>March 2016 - Present</i></p>
-                <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
-                <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Effectively communicates with clients to creatively capture and showcase their unique personality and style in contrast with their surroundings</li>
-                    <li class="col-12 col-sm-12">Uses Adobe Suite, including Photoshop and Lightroom, to manage the production and editing of images</li>
-                    <li class="col-12 col-sm-12">Demonstrates expertise in the physics of camera bodies and equipment, enabling the capture of high-quality images in varying environments</li>
-                    <li class="col-12 col-sm-12">Provides a user-friendly and engaging customer experience both online and during the photography session</li>
-                    <li class="col-12 col-sm-12">Develops a business plan that prioritizes the needs of the clients while also generating income for the business</li>
-                    <li class="col-12 col-sm-12">Serves a diverse clientele of over 50 individuals across multiple counties in North Carolina</li>
-                </ul>
-            </article>
-            <article class="col-12 col-sm-9 col-lg-10 image_and_link">
-                <img href="https://stephenawenzel.github.io/stephenwenzelphotography/" class="col-12 col-sm-12 col-lg-6" src="https://drscdn.500px.org/photo/1040560161/m%3D900/v2?sig=a7e595a0b3e694284cf33a8a187e9c2f9be082e981950ef142fe741c8459becc" onMouseDown="popupMsg('Unable to access image')">
-                <a href="https://stephenawenzel.github.io/stephenwenzelphotography/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Stephen Wenzel Photography</a>
             </article>
 
             <article class="col-12 col-sm-12 col-lg-10 e-about">
@@ -179,7 +227,7 @@
             <article class="col-12 col-sm-12 col-lg-10 e-about">
                 <h4 class="col-12 col-sm-12 e-titles">Medical and Online Assistant</h4>
                 <h5 class="col-12 col-sm-12 e-co">Western Carolina Ear, Nose and Throat</h5>
-                <p class="col-12 col-sm-12 e-time"><i>April 2023 - Present; Summers of 2018, 2019, & 2021</i></p>
+                <p class="col-12 col-sm-12 e-time"><i>Summers of 2018, 2019, & 2021</i></p>
                 <p class="col-12 col-sm-12 e-location">Clyde, North Carolina</p>
                 <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Optimized website content for a seamless user experience utilizing HTML, CSS, and the Wix website builder</li>
