--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Home - Stephen Wenzel</title>
+        <title>Stephen Wenzel - Main</title>
         <link rel="shortcut icon" type="image/jpg" href="/resume/stephen wenzel logo.png"/>
     
         <!-- Link to Bootstrap 4 CSS -->
@@ -38,7 +38,7 @@
             <nav class="col-12 col-sm-12 collapse navbar-collapse" id="sawnavbar">
                 <ul class="col-12 col-sm-12 navbar-nav">
                     <li class="col-12 col-md-2 nav-item active">
-                        <a class="nav-link" href="index.html">Home</a> <!--DON"T USE THE BACKSLASH AT THE FRONT!-->
+                        <a class="nav-link" href="index.html">Main</a> <!--DON"T USE THE BACKSLASH AT THE FRONT!-->
                     </li>
                     <li class="col-12 col-md-2 nav-item">
                         <a class="nav-link" href="education.html">Education</a>
@@ -64,7 +64,7 @@
             <article class="col-12 col-sm-12 col-md-6 col-lg-6 signature_title">
                 <img id="signature_stephen" class="col-12 col-sm-7 col-md-12 col-lg-12" src="white_signature.png" onMouseDown="popupMsg('Unable to access image')">
                 <p id="title" class="col-12 col-sm-12 col-lg-12 text-center pt-2">ONLINE RESUME</p>
-                <p id="updated" class="col-12 col-sm-12 col-lg-12 text-center pt-2">(Updated April 2023)</p>
+                <p id="updated" class="col-12 col-sm-12 col-lg-12 text-center pt-2">(Updated March 2024)</p>
             </article>
         </section>
     </main>
